[package]
name = "dshackle_health_adapter"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["lazy_node"]
default-members = [".", "lazy_node"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
regex = "1.7"
reqwest = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"
warp = "0.3"
