[package]
name = "lazy_node"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
atty = "0.2"
clap = { version = "4", features = ["derive", "env"] }
rand = "0.8"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
warp = "0.3"
